frontend/src/Game/Details/GameDetails.css
.innerContentBody {
  padding: 0;
}

.header {
  position: relative;
  width: 100%;
  height: 425px;
}

.errorMessage {
  margin-top: 20px;
  text-align: center;
  font-size: 20px;
}

.backdrop {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100%;
  background-size: cover;
}

.backdropOverlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background: var(--black);
  opacity: 0.7;
}

.headerContent {
  display: flex;
  padding: 30px;
  width: 100%;
  height: 100%;
  color: var(--white);
}

.poster {
  z-index: 2;
  flex-shrink: 0;
  margin-right: 35px;
  width: 250px;
  height: 368px;
}

.info {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow: hidden;
}

.titleRow {
  position: relative;
  display: flex;
  justify-content: space-between;
  flex: 0 0 auto;
}

.titleContainer {
  display: flex;
  margin-bottom: 5px;
}

.title {
  font-weight: 300;
  font-size: 50px;
  line-height: 60px;
}

.toggleMonitoredContainer {
  align-self: center;
  margin-right: 10px;
}

.monitorToggleButton {
  composes: toggleButton from '~Components/MonitorToggleButton.css';

  width: 40px;

  &:hover {
    color: var(--iconButtonHoverLightColor);
  }
}

.alternateTitlesIconContainer {
  align-self: flex-end;
  margin-left: 20px;
}

.filterIcon {
  float: right;
}

.gameNavigationButtons {
  position: absolute;
  right: 0;
  white-space: nowrap;
}

.gameNavigationButton {
  composes: button from '~Components/Link/IconButton.css';

  margin-left: 5px;
  width: 30px;
  color: #e1e2e3;
  white-space: nowrap;

  &:hover {
    color: var(--iconButtonHoverLightColor);
  }
}

.details {
  margin-bottom: 8px;
  padding-left: 7px;
  font-weight: 300;
  font-size: 20px;
}

.links,
.rating,
.year,
.runtime {
  margin-right: 14px;
}

.certification {
  margin-right: 15px;
  padding: 0 5px;
  border: 1px solid;
  border-radius: 5px;
}

.detailsLabel {
  composes: label from '~Components/Label.css';

  margin: 5px 10px 5px 0;
}

.detailsInfoLabel {
  composes: label from '~Components/InfoLabel.css';

  margin: 5px 10px 5px 0;
}

.path,
.sizeOnDisk,
.qualityProfileName,
.statusName,
.originalLanguage,
.studio,
.collection,
.genres {
  font-weight: 300;
  font-size: 17px;
}

.overview {
  flex: 1 0 0;
  margin-top: 8px;
  min-height: 0;
  text-wrap: balance;
  font-size: $intermediateFontSize;
}

.contentContainer {
  padding: 20px;
}

.tabList {
  margin: 0;
  padding: 0;
  border-bottom: 1px solid var(--lightGray);
}

.tab {
  position: relative;
  bottom: -1px;
  display: inline-block;
  padding: 6px 12px;
  border: 1px solid transparent;
  border-top: none;
  list-style: none;
  cursor: pointer;
}

.selectedTab {
  border-bottom: 4px solid var(--linkColor);
}

.tabContent {
  margin-top: 20px;
}

@media only screen and (max-width: $breakpointSmall) {
  .contentContainer {
    padding: 20px 0;
  }

  .headerContent {
    padding: 15px;
  }

  .title {
    font-weight: 300;
    font-size: 30px;
    line-height: 30px;
  }
}

@media only screen and (max-width: $breakpointLarge) {
  .poster,
  .gameNavigationButtons {
    display: none;
  }

  .certification,
  .links,
  .rating,
  .year,
  .runtime {
    margin-right: 9px;
  }

  .details {
    font-size: 19px;
  }
}

